[package]
name = "yellowstone-grpc-rust"
version = "0.1.0"
edition = "2021"
rust-version = "1.81.0"

[dependencies]
anyhow = "1.0.97"
futures = "0.3.30"
tonic = { version = "0.12.3", features = ["tls", "tls-webpki-roots", "tls-roots"] }
tokio = { version = "1.44.0" , features = ["full", "rt-multi-thread"]}
yellowstone-grpc-client = {  version = "5.0.0" }
yellowstone-grpc-proto = {  version = "5.0.0" }
rustls = { version = "0.23.23", features = ["ring"] }
dotenvy = "0.15.7"
pretty_env_logger = "0.5.0"
log = "0.4.26"
solana-sdk = "2.1.15"
solana-transaction-status = "2.1.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chrono = "0.4.40"
borsh = "1.5.5"
base64 = "0.22.1"
regex = "1"