[workspace]
resolver = "2"
members = [ 
    "examples/accounts", 
    "examples/parse-log",
    "examples/transactions",
    "grpc-client"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.81.0"

[workspace.dependencies]
anyhow = "1.0.97"
tokio = { version = "1.44.0"}
tokio-stream = "0.1.17"
futures-util = { version = "0.3.30" }
dotenvy = "0.15.7"
pretty_env_logger = "0.5.0"
log = "0.4.26"
solana-sdk = "2.2.2"
solana-transaction-status = "2.2.7"
chrono = "0.4.40"
borsh = "1.5.5"
base64 = "0.22.1"
yellowstone-grpc-client = {  version = "6.0.0" }
yellowstone-grpc-proto = {  version = "6.0.0" }
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }